--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <section class="main-banner section">
         <div class="container">
           <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-          <button type="button" class="btn-zamow-usluge">Zamów usługę</button>
+          <button type="button" class="btn-order">Zamów usługę</button>
         </div>
       </section>
       <section class="main-content section">
