chaned sections in index to 5 sections, replaced secctions padding to margin

--- a/index.html
+++ b/index.html
@@ -116,36 +116,37 @@
               </p>
             </li>
           </ul>
-
-          <section class="about-us section">
-            <h2>Czym się zajmujemy</h2>
-            <ul class="about-us-list">
-              <li class="about-us-list-elem">
-                <img
-                  src="images/czym-sie-zajmujemy1.jpg"
-                  alt="work on computer"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li class="about-us-list-elem">
-                <img
-                  src="images/czym-sie-zajmujemy2.jpg"
-                  alt="computer and phone"
-                  width="370"
-                  height="294"
-                />
-              </li>
-              <li class="about-us-list-elem">
-                <img
-                  src="images/czym-sie-zajmujemy3.jpg"
-                  alt="color and tablet"
-                  width="370"
-                  height="294"
-                />
-              </li>
-            </ul>
-          </section>
+        </div>
+      </section>
+      <section class="about-us section">
+        <div class="container">
+          <h2>Czym się zajmujemy</h2>
+          <ul class="about-us-list">
+            <li class="about-us-list-elem">
+              <img
+                src="images/czym-sie-zajmujemy1.jpg"
+                alt="work on computer"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="about-us-list-elem">
+              <img
+                src="images/czym-sie-zajmujemy2.jpg"
+                alt="computer and phone"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="about-us-list-elem">
+              <img
+                src="images/czym-sie-zajmujemy3.jpg"
+                alt="color and tablet"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
         </div>
       </section>
 
